--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+click==8.0.3
 cycler==0.11.0
+Flask==2.0.2
 fonttools==4.28.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
 kiwisolver==1.3.2
+MarkupSafe==2.0.1
 matplotlib==3.5.0
 numpy==1.21.4
 packaging==21.3
@@ -12,3 +17,4 @@ pytz==2021.3
 setuptools-scm==6.3.2
 six==1.16.0
 tomli==1.2.2
+Werkzeug==2.0.2
