--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 click==8.0.3
 cycler==0.11.0
 Flask==2.0.2
-fonttools==4.28.1
+fonttools==4.28.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 kiwisolver==1.3.2
@@ -10,11 +10,15 @@ matplotlib==3.5.0
 numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
+patsy==0.5.2
 Pillow==8.4.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
+scipy==1.7.3
+seaborn==0.11.2
 setuptools-scm==6.3.2
 six==1.16.0
+statsmodels==0.13.1
 tomli==1.2.2
 Werkzeug==2.0.2
