Refactor: update requirements.txt to include tkinter

--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,9 @@ pydeck==0.7.1
 Pygments==2.10.0
 Pympler==0.9
 pyparsing==3.0.6
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.3
@@ -82,6 +85,7 @@ statsmodels==0.13.1
 streamlit==1.2.0
 terminado==0.12.1
 testpath==0.5.0
+tk==0.1.0
 toml==0.10.2
 tomli==1.2.2
 toolz==0.11.2
